# ambrogio

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
ambrogio/: __init__.py  __main__.py  llm_manager.py
ambrogio/ambr_coverage/: __init__.py  ambr_coverage.py  ambr_pipeline.py  ambr_test_generator.py  pytest_reportert.py
ambrogio/ambr_docstring/: __init__.py  ambr_docstring.py  node_collector.py
ambrogio/repo_manager/: __init__.py  file_getter.py  repo_manager.py
tests/: test_ambr_ambr_docstring.py  test_ambr_node_collector.py  test_ambr_pytest_reportert.py  test_ambr_repo_manager.py
