[project]
name = "ambrogio"
version = "0.1.0"
description = "An opinionated dev agent who tackles tech"
authors = [
    {name = "Raoul Scalise",email = "scaliseraoul00@gmail.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.9"
packages = [{include = "ambrogio"}]
dependencies = [
    "libcst (>=1.6.0,<2.0.0)",
    "interrogate (>=1.7.0,<2.0.0)",
    "openai (>=1.61.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
ambrogio = "ambrogio.__main__:main"